--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Well Slap My Tits And Call Me Shirley : A Generator</title>
+    <title>Startup Ideas : A Generator</title>
+    <!--
+        Note: This is a essentially a version of Orteil's Call Me Shirley.
+        I just changed the content and some formatting.
+
+        You can find the original here:
+            http://orteil.dashnet.org/callmeshirley
+    -->
     <style>
 
     html
