Added some more nouns

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ function Generate() {
         '<a href="javascript:Generate();">' +
         Choose(['Über', 'Airbnb', 'Snapchat', 'Pinterest', 'Dropbox', 'Spotify', 'Square', 'Github', 'Wikipedia', 'Gmail', 'Tindr', 'Mint', 'Google']) +
         ' for ' +
-        Choose(['healthcare', 'finance', 'doctors', 'nurses', 'IT guys', 'truck drivers', 'miners', 'communities', 'teams', 'kids', 'business', 'girls', 'teachers', 'things', 'families', 'students', 'government', 'mothers', 'fathers', 'nonprofits', 'politicians', 'criminals', 'pets', 'waitors', 'day laborers', 'radio operators', 'fabric menders']) +
+        Choose(['healthcare', 'finance', 'doctors', 'nurses', 'IT guys', 'truck drivers', 'miners', 'communities', 'teams', 'kids', 'business', 'girls', 'teachers', 'things', 'families', 'students', 'government', 'mothers', 'fathers', 'nonprofits', 'politicians', 'criminals', 'pets', 'waitors', 'day laborers', 'data', 'houses', 'cars', 'startups', 'schools', 'government', 'laws']) +
         '</a>'
 	);
 }
